# TerminalInterface

./: .gitignore  CMakeLists.txt
TerminalInterface/: CMakeLists.txt  Utf8Iterator.c  Utf8Iterator.h  queue.c  queue.h  terminal_interface.c  terminal_interface.h
TerminalInterface/linux/: terminal2.c
TerminalInterface/shared/: terminal2.h
TerminalInterface/windows/: terminal2.c
demo/: CMakeLists.txt  main.c
